Completed the css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-        <img src="./Header Illustration.png" alt="Cowndon Image" width="450px" height="450px">
+        <img class="waiting" src="./Header Illustration.png" alt="Cowndon Image">
     </section>
     <script src="app.js"></script>
 </body>
