Updated the project nd final touch

--- a/Keyboard_event_project/index.html
+++ b/Keyboard_event_project/index.html
@@ -9,22 +9,9 @@ initial-scale=1.0" />
   </head>
   <body>
     <div id="insert">
-        Press any key to get the KeyCode
-      <!-- <div class="key"> -->
-        <!-- S -->
-        <!-- <small>e.Key</small> -->
-      <!-- </div> -->
-<!--  -->
-      <!-- <div class="key"> -->
-        <!-- 83 -->
-        <!-- <small>e.KeyCode</small> -->
-      <!-- </div> -->
-<!--  -->
-      <!-- <div class="key"> -->
-        <!-- KeyS -->
-        <!-- <small>e.Code</small> -->
-      <!-- </div> -->
-     
+        <h2> Press any key to get the KeyCode</h2> 
+      
+        <!-- Adding the Divs from Js to dynamiclly -->
     </div>
     <script src="app.js"></script>
   </body>
