added the javascript to fetch the data frm the api

--- a/Random_user_card/index.html
+++ b/Random_user_card/index.html
@@ -23,7 +23,9 @@
         </button>
       </div>
 
-      <div id="user" class="mt-6"></div>
+      <div id="user" class="mt-6">
+        <!-- from the JS file appending the stufffs here -->
+      </div>
     </div>
 
     <script src="./script.js"></script>
